// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render microdata component 1`] = `
<div
  itemScope={true}
  itemType="https://schema.org/Organization"
>
  <meta
    content="Яндекс.Недвижимость"
    itemProp="name"
  />
  <meta
    content="https://realty.yandex.ru"
    itemProp="url"
  />
  <meta
    alt="Яндекс.Недвижимость"
    itemProp="logo"
    src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
  />
  <div
    itemProp="address"
    itemScope={true}
    itemType="https://schema.org/PostalAddress"
  >
    <meta
      content="Садовническая ул., 82, с2"
      itemProp="streetAddress"
    />
    <meta
      content="Москва"
      itemProp="addressLocality"
    />
    <meta
      content="115035"
      itemProp="postalCode"
    />
  </div>
  <meta
    content="Круглосуточно"
    itemProp="openingHours"
  />
  <meta
    content="8 (800) 511-05-59"
    itemProp="telephone"
  />
</div>
`;

exports[`render microdata component without address 1`] = `
<div
  itemScope={true}
  itemType="https://schema.org/Organization"
>
  <meta
    content="Яндекс.Недвижимость"
    itemProp="name"
  />
  <meta
    content="https://realty.yandex.ru"
    itemProp="url"
  />
  <meta
    alt="Яндекс.Недвижимость"
    itemProp="logo"
    src="https://realty.yandex.ru/apple-touch-icon-192x192.png"
  />
  <meta
    content="Круглосуточно"
    itemProp="openingHours"
  />
  <meta
    content="8 (800) 511-05-59"
    itemProp="telephone"
  />
</div>
`;
